<resources>
    <string name="app_name">Book Review</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="hint">hint</string>
    <string name="next">next</string>
    <string name="results">Results</string>
    <string name="book_name">Book Name</string>
    <string name="book_cover">book_cover</string>
    <string name="todo">TODO</string>
    <string name="synopsis">Synopsis</string>
    <string name="image">image</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="scan">SCAN</string>
    <string name="take_picture">Take Picture</string>
    <string name="scan_text">Scan Text</string>
    <string name="scan_results">Scan Results:</string>
    <string name="recognize_text">Recognize Text</string>
    <string name="select_image">Select Image</string>
</resources>
